# gdsc8_ali

./: README.md
ali/: README.md  pyproject.toml
ali/src/alina/: __init__.py
ali/src/alina/cli/: analyze.py  build_skills.py  chat.py  chat_persona.py  experiment.py  fuzzy.py  interview.py  interview_full.py  interview_job.py  interview_training.py  merge.py  presuggest.py  rank.py  status.py  submissions.py  submit.py  suggest.py  suggest_training.py  version.py
ali/src/alina/models/: referential.py  suggestion.py
ali/src/alina/services/analysis/ai/: job.py  persona.py  suggest.py  training.py
ali/src/alina/services/analysis/base/: job.py  persona.py  suggest.py  training.py
ali/src/alina/services/analysis/mock/: job.py  persona.py  suggest.py  training.py
ali/src/alina/services/chat/ai/: interview.py  persona.py
ali/src/alina/services/chat/base/: interview.py  persona.py
ali/src/alina/services/chat/mock/: interview.py  persona.py
ali/src/alina/services/utils/: ai.py  aws.py  bedrock.py  interview.py  leaderboard.py  mistral.py  persona_range.py  submission.py
ali/src/alina/shared/: config.py  database.py  workspace.py
